# Course-Hall-Allocation

./: .gitignore  vercel.json
backend/: .env  outputYASH.txt  seed.js  server.js
cpp_core/: CMakeLists.txt
cpp_core/src/: DataStructures.hpp  InputParser.cpp  InputParser.h  MainAllocation.cpp  Scheduler.cpp  Scheduler.h  course_preprocessing.cpp  course_preprocessing.hpp  course_processing.cpp  course_processing.hpp  ds.cpp  ds.hpp  helper.cpp  helper.hpp  lecture_allocation.cpp  lecture_allocation.hpp  main.cpp  tutorial_allocation.cpp  tutorial_allocation.hpp  venue_processing.cpp  venue_processing.hpp
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/Components/: Dashboard.jsx  GeneratorPage.jsx  Layout.jsx  LectureHallManagar.jsx  LoginPage.jsx  ResultsPage.jsx  Sidebar.jsx  StatsViewer.jsx  TimelineViewer.jsx  Toast.jsx  UploadCentralPage.jsx  UploadPage.jsx
frontend/src/Styles/: Dashboard.css  GeneratorPage.css  Layout.css  LectureHallManager.css  LoginPage.css  ResultsPage.css  Sidebar.css  StatsViewer.css  TimelineViewer.css  Toast.css  UploadCentralPage.css  UploadCsv.css
frontend/src/context/: AuthContext.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: apiService.js
